[package]

name = "collision"
version = "0.4.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>",
        "Brian Heylin",
        "Colin Sherratt",
        "Dzmitry Malyshau",
        "Erick Tryzelaar",
        "Luqman Aden",
        "Maik Klein",
        "Mikko Perttunen",
        "Pierre Krieger",
        "Tomasz Stachowiak"
]
license = "Apache-2.0"
description = "A collision extension to cgmath"

homepage = "https://github.com/csherratt/collision-rs"
repository = "https://github.com/csherratt/collision-rs"
readme = "README.md"

keywords = ["gamedev", "cgmath", "collision"]

[lib]
name = "collision"

[dependencies.rustc-serialize]
rustc_serialize = "0.3"

[dependencies]
num = "0.1"
rand = "0.3"
cgmath = "0.4"
